--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Loopback Kue Connector",
   "main": "index.js",
+  "repository": "https://bitbucket.org/atelierfabien/loopback-connector-kue",
   "scripts": {
     "test": "NODE_ENV=test mocha -s 500 -t 10000 --reporter spec",
     "process": "NODE_ENV=test node workers/task.js"
@@ -10,11 +11,11 @@
   "author": "Fabien Franzen",
   "license": "ISC",
   "dependencies": {
-    "async": "^1.3.0",
+    "async": "^1.5.0",
     "debug": "^2.2.0",
-    "kue": "^0.9.3",
-    "lodash": "^3.10.0",
-    "loopback-connector": "^2.2.2"
+    "kue": "^0.9.6",
+    "lodash": "^3.10.1",
+    "loopback-connector": "^2.3.0"
   },
   "devDependencies": {
     "loopback-datasource-juggler": "^2.32.0",
